--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.19.0",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-router-dom": "^5.1.2",
+    "axios": "0.19.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
+    "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0",
-    "wordcloud": "^1.1.0"
+    "wordcloud": "1.1.0",
+    "styled-components": "4.4.1"
   },
   "scripts": {
     "start": "PORT=3006  react-scripts start",
