--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "dotenv": "8.2.0",
     "lodash.times": "4.3.2",
     "react": "16.11.0",
+    "react-circular-progressbar": "2.0.3",
     "react-dom": "16.11.0",
     "react-router-dom": "5.1.2",
     "react-scripts": "3.2.0",
-    "react-svg-gauge": "1.0.10",
     "styled-components": "4.4.1",
     "wordcloud": "1.1.0"
   },
