--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "0.19.0",
     "dotenv": "8.2.0",
     "lodash.times": "4.3.2",
+    "material-table": "1.54.1",
     "react": "16.11.0",
     "react-circular-progressbar": "2.0.3",
     "react-dom": "16.11.0",
